testSamples.log
Start debug 24/02/2017 17:28:25,11 
.............................................................
Compiling D:\Mes documents\Trusty\Arduino\Libraries\LcdUi\examples\Demo\Demo.ino
Chargement de la configuration
Initialisation des paquets...
Préparation des cartes
Vérification...
sketch\WindowLocoControl.cpp: In member function 'virtual void WindowLocoControl::Event(byte, LcdUi*)':
sketch\WindowLocoControl.cpp:39:37: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
    pScreen->DisplayText("Dcc ", 0, 0);
                                     ^
sketch\WindowLocoControl.cpp:47:35: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
    pScreen->DisplayText("Dc", 0, 0);
                                   ^
D:\Mes documents\Trusty\Arduino\libraries\LcdUi\src\LcdUi.cpp: In member function 'void LcdUi::MoveToNextUIWindow()':
D:\Mes documents\Trusty\Arduino\libraries\LcdUi\src\LcdUi.cpp:140:6: warning: suggest explicit braces to avoid ambiguous 'else' [-Wparentheses]
   if (pNext == NULL)
      ^
Le croquis utilise 17128 octets (53%) de l'espace de stockage de programmes. Le maximum est de 32256 octets.
Les variables globales utilisent 1141 octets (55%) de mémoire dynamique, ce qui laisse 907 octets pour les variables locales. Le maximum est de 2048 octets.
.............................................................
Compiling D:\Mes documents\Trusty\Arduino\Libraries\LcdUi\examples\Locoduino\Sample\Sample.ino
Chargement de la configuration
Initialisation des paquets...
Préparation des cartes
Vérification...
D:\Mes documents\Trusty\Arduino\Libraries\LcdUi\examples\Locoduino\Sample\Sample.ino: In function 'void setup()':
Sample:43: error: 'printCommanders' is not a member of 'Commanders'
  Commanders::printCommanders();
  ^
exit status 1
